--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -43,7 +43,7 @@
 	  </br></br>
         <h1 class="text-light"><a href="index.html">Priyanka Surwase</a></h1>
         <div class="social-links mt-3 text-center">
-           <a href="https://github.com/surwpri" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+           <a href="https://github.com/priyankasurwase3" target="_blank" class="github"><i class="bx bxl-github"></i></a>
            <a href="https://www.linkedin.com/in/priyanka-surwase/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -54,8 +54,8 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#achievements" class="nav-link scrollto"><i class="bi bi-trophy"></i> <span>ACHIEVEMENTS</span></a></li>
-          <li><a href="https://priyankasurwase.hashnode.dev/" target="_blank" class="nav-link scrollto"><i class="bx bx-server"></i> <span>BLOGS</span></a></li> 
+          <li><a href="#achievements" class="nav-link scrollto"><i class="bi bi-trophy"></i> <span>Achievements</span></a></li>
+          <li><a href="https://priyankasurwase.hashnode.dev/" target="_blank" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Blogs</span></a></li> 
 		  
      </ul>
       </nav><!-- .nav-menu -->
@@ -263,10 +263,10 @@
              <ul>
                 <li>Host resume in cloud using services like S3, Cloud front, Lambda, DynamoDB, GitHub Actions, Terraform ,etc.</li>
 			 </ul>	
-		 <h4>Disaster Recovery Solutions with AWS managed services</h4>
+		 <!-- <h4>Disaster Recovery Solutions with AWS managed services</h4>
              <ul>
                 <li>Disaster recovery (DR) strategy to ensure the data is safe and the workload stays available during a disaster using AWS managed services. To create fault-tolerant systems, ensure high availability, and protect the data with robust backup/recovery processes so that the application is safe even if all AZs within the source Region fail.</li>
-			 </ul>	
+			 </ul>	 -->
         </div>
       </div>
         
@@ -286,7 +286,7 @@
           <div class="col-lg-6 icon-box" data-aos="fade-up">
             <h4 class="title"><a href="">AWARDS</a></h4>
 			<li>AWS Certified Solutions Architect Associate  </li>
-            <li>AWS Certified Solutions Architect Professional </li>
+       <!--      <li>AWS Certified Solutions Architect Professional </li> -->
             <li>Google Cloud Certified Associate Cloud Engineer  </li>
           </div>
           <div class=" col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
