edited css file

--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -263,10 +263,15 @@
              <ul>
                 <li>Host resume in cloud using services like S3, Cloud front, Lambda, DynamoDB, GitHub Actions, Terraform ,etc.</li>
 			 </ul>	
-		 <!-- <h4>Disaster Recovery Solutions with AWS managed services</h4>
+		<h4>Disaster Recovery Solutions with AWS managed services</h4>
              <ul>
                 <li>Disaster recovery (DR) strategy to ensure the data is safe and the workload stays available during a disaster using AWS managed services. To create fault-tolerant systems, ensure high availability, and protect the data with robust backup/recovery processes so that the application is safe even if all AZs within the source Region fail.</li>
-			 </ul>	 -->
+			 </ul>	
+	  <!--	<h4>Three tier application</h4>
+             <ul>
+                <li>Designed a three tier application using AWS services like compute, networking, database, etc.</li>
+			 </ul>	-->
+	    
         </div>
       </div>
         
